<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="@dimen/activity_horizontal_margin"/>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:stretchColumns = "*">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/names"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/name"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/dates"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/date"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/phones"
            android:text="@string/phone"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/phone"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>


    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/emails"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/email"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/contacts"
            android:text="@string/contact"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/contact"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>



        <Button
            android:id="@+id/edit"
            android:text="@string/edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|fill_vertical"/>


</TableLayout>

    </LinearLayout>

